--- a/client/src/css/mana.scss
+++ b/client/src/css/mana.scss
@@ -1,21 +1,21 @@
 @import "./core";
 
 .cardColorContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  column-gap: 1px;
+  row-gap: 1px;
   position: absolute;
   visibility: visible;
   z-index: 5;
   left: 0;
-  top: 0;
+  top: 2px;
   right: 0;
   bottom: 0;
-  width: calc(100% - (2 *#{$card-border}));
-  height: 45px;
+  min-width: 0;
+  height: 0;
   color: black;
-  margin: $card-border calc(#{$card-border} + 2px);
+  padding: $card-border calc(#{$card-border} + 2px);
 }
 
 .manaHover {
@@ -27,11 +27,13 @@
   display: flex;
   flex-direction: column;
   margin: 12px;
+  pointer-events: none;
 }
 
 .colorSymbolContainer {
   display: flex;
   flex-direction: row-reverse;
+  pointer-events: none;
 }
 
 .deckColorDot {
@@ -44,6 +46,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   margin: 0 3px;
+  pointer-events: none;
 }
 
 .colorBarContainer {
@@ -51,11 +54,13 @@
   flex-direction: row-reverse;
   align-items: flex-end;
   padding-bottom: 12px;
+  pointer-events: none;
 }
 
 .colorBar {
   width: 18px;
   margin: 7px;
+  pointer-events: none;
 }
 
 .redBar {
@@ -84,10 +89,7 @@
 }
 
 .cardColorDot {
-  height: 20px;
-  width: 20px;
-  margin: 2px 0;
-  margin-right: 1px;
+  width: 100%;
   border-radius: 100%;
   background: transparent;
   border: 1px solid black;
