--- a/client/src/css/modal.scss
+++ b/client/src/css/modal.scss
@@ -39,7 +39,7 @@ $modal-border: #fff56b;
   display: flex;
   flex-direction: column;
   width: 60%;
-  padding: 40px 120px;
+  padding: 3.5% 7%;
   border: 6px solid $modal-border;
   background-color: $dark-background-color;
   color: $light-text;
@@ -71,8 +71,12 @@ $modal-border: #fff56b;
 
 .form-row {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+  @include respond-to("medium") {
+    flex-direction: row;
+    align-items: center;
+  }
   justify-content: space-between;
   width: 100%;
   position: relative;
@@ -85,9 +89,12 @@ $modal-border: #fff56b;
 .authInput {
   font-size: 36px;
   height: 44px;
-  margin: 24px 10px;
+  margin: 24px 0;
   border-radius: 4px;
-  width: 50%;
+  width: 100%;
+  @include respond-to("medium") {
+    width: 50%;
+  }
   z-index: 3;
 }
 
@@ -97,11 +104,17 @@ $modal-border: #fff56b;
 }
 
 .authButtons {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr;
+  @include respond-to("medium") {
+    grid-template-columns: 1fr 1fr;
+  }
+  grid-row-gap: 24px;
+  grid-column-gap: 24px;
   align-items: center;
-  margin: 0 40px;
+  justify-items: center;
+  margin: 0 auto;
+  width: 80%;
 }
 
 .authButton {
@@ -109,8 +122,8 @@ $modal-border: #fff56b;
   background-color: $primary-color;
   font-size: 32px;
   color: $light-text;
-  width: 270px;
-  padding: 8px 0;
+  min-width: 90%;
+  padding: 8px;
 }
 
 .otherAuthText {
