--- a/client/src/css/modal.scss
+++ b/client/src/css/modal.scss
@@ -5,17 +5,15 @@ $modal-border: #fff56b;
 .ReactModal__Overlay {
   opacity: 0;
   // transform: translateX(-100px);
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .ReactModal__Overlay--after-open {
   opacity: 1;
-  // transform: translateX(0px);
 }
 
 .ReactModal__Overlay--before-close {
   opacity: 0;
-  // transform: translateX(-100px);
 }
 
 .modal {
@@ -55,7 +53,16 @@ $modal-border: #fff56b;
   color: var(--header-text-color);
   background-color: var(--header-color);
   text-align: center;
-  font-size: 52px;
+  font-size: 36px;
+  @include respond-to("small") {
+    font-size: 42px;
+  }
+  @include respond-to("medium") {
+    font-size: 46px;
+  }
+  @include respond-to("large") {
+    font-size: 52px;
+  }
   font-family: $header-font;
 }
 
@@ -65,7 +72,17 @@ $modal-border: #fff56b;
   text-align: center;
   display: flex;
   flex-direction: column;
-  margin: 80px 0;
+  font-size: 22px;
+  margin: 50px 0;
+  @include respond-to("small") {
+    margin: 60px 0;
+  }
+  @include respond-to("medium") {
+    margin: 70px 0;
+  }
+  @include respond-to("large") {
+    margin: 80px 0;
+  }
   font-family: $body-font;
 }
 
@@ -83,17 +100,27 @@ $modal-border: #fff56b;
 }
 
 .form-label {
-  font-size: 34px;
+  font-size: 22px;
+  @include respond-to("small") {
+    font-size: 26px;
+  }
+  @include respond-to("medium") {
+    font-size: 20px;
+  }
+  @include respond-to("large") {
+    font-size: 34px;
+  }
 }
 
 .authInput {
   font-size: 36px;
   height: 44px;
-  margin: 24px 0;
+  margin: 10px 0 16px 0;
   border-radius: 4px;
   width: 100%;
   @include respond-to("medium") {
     width: 50%;
+    margin: 24px 0;
   }
   z-index: 3;
 }
@@ -120,10 +147,15 @@ $modal-border: #fff56b;
 .authButton {
   font-family: $header-font;
   background-color: $primary-color;
-  font-size: 32px;
   color: $light-text;
-  min-width: 90%;
-  padding: 8px;
+  // width: 80%;
+  padding: 4px 10vw;
+  font-size: 24px;
+  @include respond-to("medium") {
+    padding: 8px 5vw;
+    font-size: 32px;
+  }
+  white-space: nowrap;
 }
 
 .otherAuthText {
