--- a/client/src/css/mana.scss
+++ b/client/src/css/mana.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   column-gap: 1px;
-  row-gap: 1px;
+  row-gap: 2px;
   position: absolute;
   visibility: visible;
   z-index: 5;
@@ -100,10 +100,27 @@
   filter: contrast(100%);
 }
 
+.manaDivider {
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  -webkit-text-stroke: 0.05px black;
+}
+
 .ghostColorDot {
   filter: gray;
   filter: grayscale(0.85);
   -webkit-filter: grayscale(0.85);
+  opacity: $ghost-opacity;
+}
+
+.ghostDivider {
+  filter: gray;
+  filter: grayscale(0.85);
+  -webkit-filter: grayscale(0.85);
+  opacity: $ghost-opacity;
 }
 
 .blue {
