--- a/client/src/css/core.scss
+++ b/client/src/css/core.scss
@@ -1482,12 +1482,74 @@ $header-font: "Cinzel";
   border: 2px solid $dark-background-color;
 }
 
+.typeInputDiv {
+  width: 100%;
+  margin: 0 0 -2px auto;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-family: $body-font;
+  font-weight: 600;
+  font-size: 20px;
+  border: 2px solid $dark-background-color;
+  background-color: black;
+}
+
+.typeSettingInput {
+  background-color: black;
+  border: none;
+  color: white;
+  margin-right: 10px;
+  width: 100%;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.typeSettingInput {
+  text-indent: 4px;
+}
+
+.settingInputError::placeholder {
+  color: darkred;
+}
+
 .typeSettingButton {
   font-size: 20px;
   font-weight: bolder;
   font-family: $body-font;
   color: white;
   margin-right: 12px;
+}
+
+.typeInputButton {
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: $body-font;
+  color: white;
+  margin: 0 12px;
+  cursor: pointer;
+}
+
+.propertyRow {
+  display: flex;
+  flex-direction: row;
+  margin: 8px 0;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.toggleProperty {
+  padding: 8px;
+  background-color: transparent;
+  color: $dark-text;
+  font-size: 20px;
+}
+
+.currentProperty {
+  color: $light-text;
+  background-color: $primary-color;
 }
 
 .mainTypeButton {
@@ -1922,6 +1984,24 @@ $header-font: "Cinzel";
 
 .toolSlider {
   width: 10%;
+}
+
+.cardSortingContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 40px 0;
+  padding-left: 44px;
+}
+
+.cardSortButton {
+  font-size: 20px;
+  color: white;
+  padding: 8px 8px;
+}
+
+.activeSortButton {
+  background-color: $primary-color;
 }
 
 // Utility
