--- a/client/src/css/modal.scss
+++ b/client/src/css/modal.scss
@@ -35,6 +35,7 @@ $modal-border: #c0b50c;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 60%;
   padding: 3.5% 7%;
   border: 6px solid $modal-border;
@@ -53,15 +54,15 @@ $modal-border: #c0b50c;
   color: var(--header-text-color);
   background-color: var(--header-color);
   text-align: center;
-  font-size: 36px;
+  font-size: 44px;
   @include respond-to("small") {
-    font-size: 42px;
+    font-size: 50px;
   }
   @include respond-to("medium") {
-    font-size: 46px;
+    font-size: 54px;
   }
   @include respond-to("large") {
-    font-size: 52px;
+    font-size: 60px;
   }
   font-family: $header-font;
 }
@@ -72,6 +73,7 @@ $modal-border: #c0b50c;
   text-align: center;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   font-size: 22px;
   margin: 50px 0;
   @include respond-to("small") {
@@ -86,13 +88,13 @@ $modal-border: #c0b50c;
   font-family: $body-font;
 }
 
-.form-row {
+.formColumn {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   @include respond-to("medium") {
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
   }
   justify-content: space-between;
   width: 100%;
@@ -114,16 +116,17 @@ $modal-border: #c0b50c;
 }
 
 .authInput {
-  height: 32px;
-  margin: 10px 0 16px 0;
-  border-radius: 4px;
+  height: 40px;
+  margin: 8px 0 20px 0;
+  border-radius: 6px;
+  border: none;
   width: 100%;
   font-size: 20px;
   @include respond-to("medium") {
-    width: 50%;
-    margin: 24px 0;
+    width: 100%;
+    margin: 8px 0 28px 0;
     font-size: 36px;
-    height: 44px;
+    height: 50px;
   }
   z-index: 3;
 }
@@ -152,17 +155,18 @@ $modal-border: #c0b50c;
 }
 
 .authButton {
-  font-family: $header-font;
-  background-color: $primary-color;
-  color: $light-text;
+  font-family: $body-font;
+  background-color: $accent-color;
+  color: $dark-background-color;
   // width: 80%;
-  padding: 4px 10vw;
+  padding: 4px 8vw;
   font-size: 24px;
   @include respond-to("medium") {
-    padding: 8px 5vw;
-    font-size: 32px;
+    padding: 8px 4vw;
+    font-size: 30px;
   }
   white-space: nowrap;
+  border-radius: 4px;
 }
 
 .otherAuthText {
